--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -31,6 +31,7 @@
     "@types/simple-peer": "^9.11.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "editorconfig": "^1.0.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
