--- a/yike-server/package.json
+++ b/yike-server/package.json
@@ -41,6 +41,7 @@
     "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "cross-env": "^7.0.3",
+    "editorconfig": "^1.0.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
