--- a/yike-server/package.json
+++ b/yike-server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "ajv": "^8.11.2",
     "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
@@ -26,6 +27,7 @@
     "mongodb": "^4.12.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.8.0",
+    "socket.io": "^4.5.4",
     "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@types/koa-session": "^5.10.6",
     "@types/koa-static": "^4.0.2",
     "@types/koa2-cors": "^2.0.2",
+    "@types/koa__cors": "^3.3.0",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.6",
