--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --fix --ext .*"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.0",
     "antd": "^5.0.0",
     "axios": "^1.1.3",
@@ -21,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "simple-peer": "^9.11.1"
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.36",
     "@types/md5": "^2.3.2",
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
@@ -31,6 +34,11 @@
     "@types/react-dom": "^18.0.8",
     "@types/simple-peer": "^9.11.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@unocss/preset-attributify": "^0.46.5",
+    "@unocss/preset-icons": "^0.46.5",
+    "@unocss/preset-uno": "^0.46.5",
+    "@unocss/reset": "^0.46.5",
+    "@unocss/transformer-attributify-jsx": "^0.46.5",
     "@vitejs/plugin-react": "^2.2.0",
     "editorconfig": "^1.0.1",
     "eslint": "^8.0.1",
@@ -40,6 +48,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
     "typescript": "*",
+    "unocss": "^0.46.5",
     "vite": "^3.2.3"
   }
 }
