--- a/yike-server/package.json
+++ b/yike-server/package.json
@@ -28,7 +28,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.8.0",
     "socket.io": "^4.5.4",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.9",
@@ -42,6 +43,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.6",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "cross-env": "^7.0.3",
     "editorconfig": "^1.0.1",
