--- a/yike-server/package.json
+++ b/yike-server/package.json
@@ -43,6 +43,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.9",
     "@types/nodemailer": "^6.4.6",
+    "@types/simple-peer": "^9.11.5",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "cross-env": "^7.0.3",
