--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -37,6 +37,7 @@
     "@unocss/preset-attributify": "^0.46.5",
     "@unocss/preset-icons": "^0.46.5",
     "@unocss/preset-uno": "^0.46.5",
+    "@unocss/preset-wind": "^0.47.6",
     "@unocss/reset": "^0.46.5",
     "@unocss/transformer-attributify-jsx": "^0.46.5",
     "@vitejs/plugin-react": "^2.2.0",
@@ -49,6 +50,7 @@
     "eslint-plugin-react": "^7.31.11",
     "typescript": "*",
     "unocss": "^0.46.5",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-imp": "^2.3.1"
   }
 }
