--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -50,7 +50,6 @@
     "eslint-plugin-react": "^7.31.11",
     "typescript": "*",
     "unocss": "^0.46.5",
-    "vite": "^3.2.3",
-    "vite-plugin-imp": "^2.3.1"
+    "vite": "^3.2.3"
   }
 }
