--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
@@ -31,6 +32,7 @@
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.24",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.8",
     "@types/simple-peer": "^9.11.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
