--- a/yike-server/tsconfig.json
+++ b/yike-server/tsconfig.json
@@ -10,7 +10,8 @@
     },
     "allowSyntheticDefaultImports": true, // 没有默认导出时, 编译器会创建一个默认导出
     "esModuleInterop": true, // 允许export= 导出, 由import from导入
-    "forceConsistentCasingInFileNames": true // 强制区分大小写
+    "forceConsistentCasingInFileNames": true, // 强制区分大小写
+    "sourceMap": true
   },
   "include": [
     "src/**/*" // 需要编译的的文件和目录
