--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -27,6 +27,7 @@
     "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
+    "@iconify-json/fluent": "^1.1.17",
     "@iconify-json/mdi": "^1.1.36",
     "@types/md5": "^2.3.2",
     "@types/node": "^18.11.9",
