--- a/yike-server/package.json
+++ b/yike-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/app.ts --files",
-    "build": "tsc && cross-env NODE_ENV=production node -r tsconfig-paths/register dist/app.js",
+    "build": "tsc",
+    "serve": "cross-env NODE_ENV=production node -r tsconfig-paths/register out/src/app.js",
     "lint": "eslint --fix src/core/SocketServer.ts"
   },
   "keywords": [],
