--- a/yike-server/package.json
+++ b/yike-server/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/app.ts --files",
+    "dev": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/app.ts",
     "build": "tsc",
-    "serve": "cross-env NODE_ENV=production node -r tsconfig-paths/register out/src/app.js --files",
-    "lint": "eslint --fix src/core/SocketServer.ts"
+    "prod": "cross-env NODE_ENV=production node -r tsconfig-paths/register out/src/app.js"
   },
   "keywords": [],
   "author": "",
