--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --mode development",
     "build": "tsc && vite build --mode production",
     "preview": "vite preview",
-    "lint": "eslint --fix --ext .*"
+    "vitest": "vitest",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
@@ -45,6 +46,7 @@
     "@unocss/reset": "^0.46.5",
     "@unocss/transformer-attributify-jsx": "^0.46.5",
     "@vitejs/plugin-react": "^2.2.0",
+    "cypress": "^12.6.0",
     "editorconfig": "^1.0.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -55,6 +57,7 @@
     "typescript": "*",
     "unocss": "^0.46.5",
     "vite": "^3.2.3",
-    "vite-plugin-imp": "^2.3.1"
+    "vite-plugin-imp": "^2.3.1",
+    "vitest": "^0.28.5"
   }
 }
