feat: 新增 cypress e2e 测试用例

--- a/yike-client/tsconfig.json
+++ b/yike-client/tsconfig.json
@@ -20,9 +20,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "outDir": "out",
-    "types": ["vitest/globals", "cypress", "cypress/react18"]
+    "types": ["vitest", "vitest/globals", "cypress", "cypress/react18"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "tests/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "tests/**/*.ts"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
