--- a/yike-client/package.json
+++ b/yike-client/package.json
@@ -57,7 +57,6 @@
     "typescript": "*",
     "unocss": "^0.46.5",
     "vite": "^3.2.3",
-    "vite-plugin-imp": "^2.3.1",
-    "vitest": "^0.28.5"
+    "vite-plugin-imp": "^2.3.1"
   }
 }
